logging file content and passing style sheet name to look for

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,9 @@
     "oclif",
     "oclif-typescript",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "no-await-in-loop": "off",
+    "no-useless-constructor": "off"
+  }
 }
