--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "build:dev": "./bin/dev mapper -p /media/veracrypt1/frontend-toolkit/packages/frontend-sdk/src/components -r /media/veracrypt1/frontend-toolkit/packages/frontend-sdk/src -f app.css"
   },
   "engines": {
     "node": ">=12.0.0"
