--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
-    "build:dev": "./bin/dev mapper -p /code/frontend-toolkit/packages/frontend-sdk/src/components -r /code/frontend-toolkit/packages/frontend-sdk/src -f app.less"
+    "build:dev": "./bin/dev mapper -p /media/veracrypt1/frontend-toolkit/packages/frontend-sdk/src/components -r /media/veracrypt1/frontend-toolkit/packages/frontend-sdk/src -f app.css"
   },
   "engines": {
     "node": ">=12.0.0"
